--- a/Hyperstore.Samples.Overview/Hyperstore.Samples.Overview/MainWindow.xaml
+++ b/Hyperstore.Samples.Overview/Hyperstore.Samples.Overview/MainWindow.xaml
@@ -1,27 +1,59 @@
 ﻿<Window x:Class="Hyperstore.Samples.Overview.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Background="{DynamicResource WindowBackgroundBrush}"
+        Title="Hyperstore Samples" Height="350" Width="525" WindowStyle="ThreeDBorderWindow">
     <Window.Resources>
-        <ResourceDictionary Source="Themes/ExpressionDark.xaml"/>
+        <ResourceDictionary Source="Themes/ExpressionDark.xaml"/>       
     </Window.Resources>
-    <Grid >
-        <Grid.Background>
-            <LinearGradientBrush EndPoint="1.204,0.5" StartPoint="0.056,0.5">
-                <GradientStop Color="#FFFFFFFF" Offset="0" />
-                <GradientStop Color="#FFD4D7DB" Offset="1" />
-            </LinearGradientBrush>
-        </Grid.Background>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="127*"/>
-            <ColumnDefinition Width="133*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="50*"/>
-            <RowDefinition Height="273*"/>
-        </Grid.RowDefinitions>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="54,22,0,0" VerticalAlignment="Top" Width="75"/>
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="66,17,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+    <Grid>
+        <Grid.Resources>
+            <ResourceDictionary>
+                <ControlTemplate x:Key="InputErrorTemplate">
+                    <DockPanel>
+                        <Ellipse DockPanel.Dock="Right" Margin="2,0" 
+                    ToolTip="{Binding AdornedElement.(Validation.Errors)[0].ErrorContent, ElementName=errorAdorner}"
+                    Width="10" Height="10">
+                            <Ellipse.Fill>
+                                <LinearGradientBrush>
+                                    <GradientStop Color="#11FF1111" Offset="0" />
+                                    <GradientStop Color="#FFFF0000" Offset="1" />
+                                </LinearGradientBrush>
+                            </Ellipse.Fill>
+                        </Ellipse>
+                        <AdornedElementPlaceholder x:Name="errorAdorner" />
+                    </DockPanel>
+                </ControlTemplate>
 
+                <Style TargetType="TextBox">
+                    <Setter Property="Validation.ErrorTemplate" Value="{StaticResource InputErrorTemplate}" />
+                </Style>
+            </ResourceDictionary>
+        </Grid.Resources>
+        <Border BorderBrush="{DynamicResource NormalBorderBrush}" CornerRadius="10" BorderThickness="2" HorizontalAlignment="Stretch" Margin="10" VerticalAlignment="Stretch"/>
+
+        <Grid Margin="20">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="157*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock HorizontalAlignment="Left" Margin="10" TextWrapping="Wrap" Text="First name"  VerticalAlignment="Center"/>
+            <TextBlock HorizontalAlignment="Left" Margin="10" Grid.Row="1" TextWrapping="Wrap" Text="Last name"   VerticalAlignment="Center"/>
+            <TextBlock HorizontalAlignment="Left" Margin="10" Grid.Row="2" TextWrapping="Wrap" Text="Full name"  VerticalAlignment="Center"/>
+            <TextBlock HorizontalAlignment="Left" Margin="10" Grid.Row="3" TextWrapping="Wrap" Text="Email"   VerticalAlignment="Center"/>
+
+            <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="10"  Text="{Binding FirstName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged ,  NotifyOnValidationError=True, ValidatesOnExceptions=True}"  Width="180"/>
+            <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="10" Grid.Row="1" Text="{Binding LastName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged,  NotifyOnValidationError=True, ValidatesOnExceptions=True }"  Width="180"/>
+            <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="10" Grid.Row="2" TextWrapping="Wrap" Text="{Binding FullName}"/>
+            <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="10" Grid.Row="3" Text="{Binding Email, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}"  Width="180"/>
+
+        </Grid>
     </Grid>
 </Window>
